examples/errors/e0104.sdm
module example <https://example.com/api> is

  structure Foo

  structure Bar

  structure Foo

end
